<resources>
    <string name="app_name">ShoeStore</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="welcome_text_one">Welcome to my shoe store. This store allows you to browse shoes in a list, add shoes and edit the details of the shoe. We really love shoes and hope you enjoy them as much as us!</string>
    <string name="welcome_text_two">If you need any help using the app do not hesitate to contact us. To get started just click the button below to continue to the instructions screen.</string>
    <string name="button_instructions">Instructions</string>
    <string name="instructions_text_one">All you  have to do is click the button below and you will be taken to the shoe listing screen.</string>
    <string name="instructions_text_two">Just click the button below for all your shoey needs</string>
    <string name="shoe_listing_button">Shoe Listingg</string>
    <string name="add_shore">Add Shoe</string>
    <string name="cancel_button_text">Cancel</string>
    <string name="save_button_text">Save</string>
    <string name="field_required">This field cannot be empty!</string>
    <string name="shoe_name_hint">Shoe name</string>
    <string name="company_hint">Company</string>
    <string name="shoe_size_hint">Shoe size</string>
    <string name="shoe_description_hint">Shoe description</string>
    <string name="login_fragment_label">Login</string>
    <string name="welcome_fragment_label">Welcome</string>
    <string name="instructions_fragment_label">Instructions</string>
    <string name="shoe_listing_fragment_label">Shoe Listing</string>
    <string name="add_shoe_fragment_label">Add a shoe</string>
    <string name="shoe_name_label">Name</string>
    <string name="company_label">Company</string>
    <string name="size_label">Size</string>
    <string name="description_label">Description</string>
    <string name="logout_title">Logout</string>
</resources>
